# host-terminal-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CONNECTORS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
commands/: explore.md  git.md  permissions.md  shell.md  system-info.md
scripts/: package_plugin.py  setup_marketplace.py
skills/codebase-explorer/: SKILL.md
skills/terminal-workflows/: SKILL.md
src/host_terminal_mcp/: config.py  executor.py  http_server.py  server.py
tests/: __init__.py  test_config.py  test_executor.py  test_http_server.py
