[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "host-terminal-mcp"
version = "0.1.0"
description = "MCP server for executing terminal commands on the host machine with configurable permissions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ankit", email = "ankit.ag.in@gmail.com" }
]
keywords = ["mcp", "terminal", "shell", "claude", "cowork"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
host-terminal-mcp = "host_terminal_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/host_terminal_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
]
